Add Valitive event synchronization classes and update properties provider interface

--- a/force-app/main/default/classes/IValitivePropertiesProvider.cls
+++ b/force-app/main/default/classes/IValitivePropertiesProvider.cls
@@ -7,4 +7,7 @@ public interface IValitivePropertiesProvider {
     String getPassword();
     String getPrivateMonitoringSetId();
     String getOrganisationMonitoringSetId();
+    String getClientId();
+    String getClientSecret();
+    String getApiVersion();
 }
